--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ quarkus.datasource.password=card_api
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/card_api_quarkus
 quarkus.datasource.jdbc.max-size=16
+
+com.card.auth.jwt.secret=UCnmDHn9QS+GqLR5Gkyfw00fykPgW8R9b9uALi4xHEA=
+com.card.auth.jwt.expiration.minutes=10
